--- a/ald-functions-FacilitationZ/css/facilitationZ.css
+++ b/ald-functions-FacilitationZ/css/facilitationZ.css
@@ -6,53 +6,49 @@
 */
 
 /*****
-* pour les pages produits 
+* en général
 *****/
-
-.visuel-produit {
-	max-width: 45% ;
+a img {
+	opacity: 1;
+	border: 1px lightgrey solid;
+	padding: 0.4rem;
 }
-
-form #contact-codev {
-	max-width: 45% ;
-}
-
-
 
 /*****
 * pour les shortcodes
 *****/
+
+#ald-functions {
+	margin-bottom: 2rem;
+}
+
 .ald-functions-gauche, 
 .ald-functions-droite {
-	color: green ; 
 	overflow: hidden;
-	width: 95%;
+	width: 100%;
 	/* padding-right: 30px;
 	padding-left: 30px; */
 }
 
 .ald-functions-gauche > .image-holder,
 .ald-functions-droite > .image-holder {
-	width: 20%;
+	width: 40%;
 	line-height: 200px; /* see http://www.vanseodesign.com/css/vertical-centering/  */
 }
 
-.ald-functions-droite > .text-holder  {
-	float: right;
-	width: 75% ;
-}
-
-
-.ald-functions-droite > .image-holder {
-	float: left;
-}
-
+.ald-functions-droite > .text-holder,
 .ald-functions-gauche > .text-holder  {
-	float: left;
-	width: 75% ;
+	width: 55% ;
 }
 
-.ald-functions-gauche > .image-holder {
+
+.ald-functions-droite > .image-holder,
+.ald-functions-gauche > .text-holder {
+	float: left;
+}
+
+.ald-functions-gauche > .image-holder,
+.ald-functions-droite > .text-holder {
 	float: right;
 }
 
@@ -60,14 +56,9 @@ form #contact-codev {
 #ald-functions > div.image-holder > a > img {
 	height: auto;
 	max-width: 100%;
-	vertical-align: middle;
-	border-radius: 3px ;
-	-webkit-box-shadow: 0 0 4px #eee;
-	-moz-box-shadow: 0 0 4px #eee;
-	box-shadow: 0 0 4px #eee;
-	border-radius: 4px;
-	border: 1px solid #ddd;
-	
+	vertical-align: middle;	
+	border: none;
+
 }
 
 #hr-ald-functions {
@@ -75,4 +66,32 @@ form #contact-codev {
 	margin-bottom: 20px;
 	border: 0;
 	border-top: 1px solid #eee;
+}
+
+/*****
+* pour le formulaire à l'intérieur du shortcode 
+*****/
+#ald-functions span.wpcf7-list-item {
+	display: block ;
+}
+
+form#contact-codev {
+	border: 2px solid #E50745;
+	padding: 1rem;
+}
+
+form#contact-codev p {
+	font-size: 80%;
+}
+
+#ald-functions input[type=email], 
+#ald-functions input[type=text], 
+#ald-functions textarea {
+	padding: 5px .5rem;
+	font-size: 0.8rem;
+}
+
+#ald-functions p.privacy-spam {
+	font-style: italic;
+	opacity: 0.7;
 }
