--- a/ald-functions-FacilitationZ/css/facilitationZ.css
+++ b/ald-functions-FacilitationZ/css/facilitationZ.css
@@ -30,15 +30,15 @@ a img {
 	padding-left: 30px; */
 }
 
-.ald-functions-gauche > .image-holder,
-.ald-functions-droite > .image-holder {
-	width: 40%;
-	line-height: 200px; /* see http://www.vanseodesign.com/css/vertical-centering/  */
+.ald-functions-gauche > .image-holder, .ald-functions-droite > .image-holder {
+    width: 48%;
+    /* line-height: 200px; */
+    margin-top: -5px;
 }
 
 .ald-functions-droite > .text-holder,
 .ald-functions-gauche > .text-holder  {
-	width: 55% ;
+	width: 52% ;
 }
 
 
